Fix non-clickable appstore logo on mobile

--- a/src/components/ProjectsPage/AppleStoreLogo.module.scss
+++ b/src/components/ProjectsPage/AppleStoreLogo.module.scss
@@ -4,6 +4,8 @@
   align-items: center;
   justify-content: space-around;
   text-decoration: none;
+  position: relative;
+  z-index: 2;
 }
 
 .textContainer {
